# rag-dungeon-crawler

./: .env.example  .gitignore  CNAME  Dockerfile  README.md  TextBasedGame.py  docker-compose.yml  index.html  pyproject.toml  requirements.txt
api/: config.py  db.py  main.py
api/game/: engine.py  narrative.py  pathfinding.py  world.py
api/models/: actions.py  game_state.py
api/routers/: game.py  health.py
api/state/: context.py  manager.py
infrastructure/: main.tf  outputs.tf  secret_iam.tf  secrets.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_api.py  test_db_resilience.py  test_game_engine.py  test_world.py
