[tool.poetry]
name = "cs-499-capstone"
version = "0.1.0"
description = ""
authors = ["John-Swindell <john@jswindell.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.2"
uvicorn = "^0.42.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.13.1"
python-dotenv = "^1.2.1"
motor = "^3.7.1"
uvloop = "^0.22.1"
google-genai = "^1.73.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
